--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "json-server": "^1.0.0-beta.0",
+    "swiper": "^11.1.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
